D11 | 190115 | html 문법 공부

--- a/HTML/python.html
+++ b/HTML/python.html
@@ -10,7 +10,7 @@
     <body>
         <h1><b>프로그래밍 교육</b></h1>
         <a href="#1-title"><h6 ><img src="./image/python.png" width="100" height="100"></h6></a> <a href="#2-title"><h6><img src="./image/html.png" width="100" height="100"></h6></a><h6>참고사이트</h6>
-        <h2><b><a href="https://docs.python.org/ko/3/tutorial/index.html" id= "1-title">파이썬</b></h2></a>
+        <h2><b><a href="C:\Users\student\HTML_tag\HTML\image" id= "1-title">파이썬</b></h2></a>
         <h3><b>number type</b></h3>
         <h3>파이썬에서 숫자형은 아래와 같이 있다.</h3>
         <ul>    
@@ -28,7 +28,23 @@
         </ul>
 
         <h1><a href="https://developer.mozilla.org/ko/" id="2-title">웹</a></h1>
-        
+        <style>
+            #ssafy > p:nth-child(3){
+                color : red;
+            }
+        </style>
+        <div id="ssafy">
+            <h2>어떤게 선택될까?</h2>
+            <p>1112</p>
+            <p>2222</p>
+
+            <p>3333</p>
+
+            <p>4444</p>
+
+
+
+        </div>
 
 
 
